Updates to random location code to prevent overlaps.

--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,14 @@ header {
 	position: absolute;
 	top: 0;
 	left: 0;
+	cursor: pointer;
+}
+
+.playerShipSelected {
+	box-shadow:0 0 4px 4px rgba(49,79,79,1);
+	-moz-box-shadow:0 0 4px 4px rgba(49,79,79,1);
+	-webkit-box-shadow:0 0 4px 4px rgba(49,79,79,1);
+	z-index: 999;
 }
 
 #gameDeployment {
